--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -33,11 +33,14 @@
     margin-left: -48px
     margin-top: 4rem
     width: calc( 100% + 96px )
-    height: 120%       
+    height: 110%       
     background-image: url('../assets/curso/temas/img5.jpg')
     background-size: 100% auto  
     background-repeat: no-repeat
     background-position: center      
+
+.b-sh
+  box-shadow: 2px 5px 5px #707070
 
 .tarjeta--boton.color-primario
   background: rgb(245,245,245)
@@ -48,11 +51,63 @@
   * 
     color: white !important 
 
+  & h4
+    color: #3CFFE9 !important
+
 .color1
   background-color: #EEF6FC
 
 .color2
   background-color: #EDE7F7 
+
+.linea-tiempo-d
+  &__item
+    &--selected
+      .linea-tiempo-d
+        &__item
+          &__content
+            background-color: #F6F6F6
+            &__title
+              font-weight: $base-bold-font-weight
+          &__number
+            font-weight: $base-bold-font-weight
+    &__col-number
+      display: flex
+      flex-direction: column
+
+    &__dots
+      flex: 1
+      display: flex
+      justify-content: center
+      padding: 5px 0
+      &:after
+        content: ''
+        display: block
+        width: 0
+        height: 100%
+        border-left: 5px dotted $color-sistema-e
+    &__number
+      display: flex
+      align-items: center
+      justify-content: center
+      min-width: 40px
+      height: 40px
+      cursor: pointer
+      transition: background-color .3s ease-in-out, color .3s ease-in-out
+    &__content
+      background-color: #E6E6E6
+      &__title
+        display: flex
+        align-items: center
+        height: 40px
+        cursor: pointer
+        &:hover
+          font-weight: $base-bold-font-weight
+      &__slot
+        overflow: hidden
+        transition: height .5s ease-in-out
+  .tarjeta
+    border-radius: 5px
 
 .linea-tiempo-d.color-primario .linea-tiempo-d__item--selected .linea-tiempo-d__item__number
   background-color: #EFD198
@@ -82,6 +137,42 @@
 .p-blue
   color: #2194E5  
 
+.img180
+  max-width: 180px !important
+
+.simbologia *
+  cursor: pointer
+
+.dialogo
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1)
+  padding: 15px
+  border-radius: 20px
+  position: absolute
+  background-color: white
+  width: 550px
+  transform: translate(-50%)
+  &__azul
+    background-color: #2A77AD
+    h5, p
+      color: #FFF
+  &__gris
+    background: rgb(167,179,207);
+    background: linear-gradient(0deg, rgba(167,179,207,1) 20%, rgba(245,245,245,1) 82%, rgba(246,246,246,1) 100%);
+    h5, p
+      color: black
+
+.titulo_modal
+  position: absolute
+  right: -85%
+  top: -30px
+  font-size: 50px
+  font-weight: bold
+  &_azul
+    color: rgba(#FFFFFF, 0.27) !important
+  &_gris
+    color: rgba(#12263F, 0.27) !important
+
+
 .bg4
   position: relative
   .row, figure, p, h3, .titulo-sexto.color-primario
@@ -109,6 +200,7 @@
 .tarjeta.color-acento-botones
   background: rgb(245,245,245)
   background: linear-gradient(180deg, rgba(245,245,245,1) 0%, rgba(245,245,245,1) 20%, rgba(167,179,207,1) 100%) 
+
 .tarjeta.color-primario
   background: rgb(17,110,185)
   background: linear-gradient(180deg, rgba(17,110,185,1) 0%, rgba(24,148,246,1) 100%) 
@@ -171,11 +263,16 @@
 .cajon.color-acento-contenido::before  
   background-color: #CDB8F1
 
+.cajon.color-primario
+  background-color: #EDE7F7
+.cajon.color-primario::before  
+  background-color: #2194E5  
+
 .bg-purple
   background: rgb(126,83,197)
   background: linear-gradient(180deg, rgba(126,83,197,1) 0%, rgba(8,3,131,1) 100%)
-  border: 10px solid white
   border-radius: 20px
+  max-width: 480px
 
 .bg5
   position: relative
@@ -399,7 +496,9 @@
   background-color: #FFFFFF
 
 .lista-ul--color li > i:first-of-type
-  color: #116EB9  
+  color: #116EB9 
+.li-color
+  color: #7F4FC7 !important   
 
 @media screen and (max-width: 992px)
   .bg-cajon
