--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -137,41 +137,21 @@
 .p-blue
   color: #2194E5  
 
-.img180
-  max-width: 180px !important
+@media (max-width: $bp-max-xs)
+  .img-infografica__content .img-infografica__item:first-child
+    top: 25.6% !important
+    left: 25.5% !important
+  .img-infografica__content .img-infografica__item:nth-child(0n+2)
+    left: 71.8% !important
+  .img-infografica__content .img-infografica__item:nth-child(0n+3)
+    left: 25.7% !important
+  .img-infografica__content .img-infografica__item:nth-child(0n+4)
+    left: 71.8% !important 
 
-.simbologia *
-  cursor: pointer
 
-.dialogo
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1)
-  padding: 15px
-  border-radius: 20px
-  position: absolute
-  background-color: white
-  width: 550px
-  transform: translate(-50%)
-  &__azul
-    background-color: #2A77AD
-    h5, p
-      color: #FFF
-  &__gris
-    background: rgb(167,179,207);
-    background: linear-gradient(0deg, rgba(167,179,207,1) 20%, rgba(245,245,245,1) 82%, rgba(246,246,246,1) 100%);
-    h5, p
-      color: black
-
-.titulo_modal
-  position: absolute
-  right: -85%
-  top: -30px
-  font-size: 50px
-  font-weight: bold
-  &_azul
-    color: rgba(#FFFFFF, 0.27) !important
-  &_gris
-    color: rgba(#12263F, 0.27) !important
-
+@media (max-width: 412px)
+  .linea-tiempo-d__item__content__title 
+    height: 85px !important
 
 .bg4
   position: relative
@@ -263,16 +243,10 @@
 .cajon.color-acento-contenido::before  
   background-color: #CDB8F1
 
-.cajon.color-primario
-  background-color: #EDE7F7
-.cajon.color-primario::before  
-  background-color: #2194E5  
-
 .bg-purple
   background: rgb(126,83,197)
   background: linear-gradient(180deg, rgba(126,83,197,1) 0%, rgba(8,3,131,1) 100%)
   border-radius: 20px
-  max-width: 480px
 
 .bg5
   position: relative
@@ -317,7 +291,7 @@
 .bloque-texto-a.color-primario
   background-color: #F6F6F6
 .bloque-texto-a.color-primario::before
-  background-color: #116EB9  
+  background: linear-gradient(180deg, rgba(17,110,185,1) 0%, rgba(24,148,246,1) 100%)
 
 .bloque-texto-a::before
   left: 34%    
@@ -328,6 +302,10 @@
 .p-under  
   text-decoration: underline  
   color: #2194E5
+
+.p-under1  
+  text-decoration: underline 
+  text-decoration-color: #7F4FC7  
 
 .bg6
   position: relative
@@ -492,8 +470,12 @@
     background-repeat: no-repeat
     background-position: center top
 
+.shw
+  box-shadow: inset 0 0 3px 2px #7070701d
+
 .tarjeta.color-secundario
   background-color: #FFFFFF
+  box-shadow: inset 0 0 3px 2px #7070701d
 
 .lista-ul--color li > i:first-of-type
   color: #116EB9 
@@ -576,4 +558,28 @@
     background-image: url('../assets/curso/temas/img66.jpg')
     background-size: 100% auto  
     background-repeat: no-repeat
-    background-position: center top      
+    background-position: center top   
+
+.bg-degrade
+  background: #2194E5
+.tarjeta-foto-hover
+  position: relative
+  overflow: hidden
+  &:hover
+    .tarjeta-foto-hover__tarjeta
+      transform: translateY(0%)
+  &__titulo
+    position: absolute
+    bottom: 0
+    width: 100%
+    background-color: #5aabe4b9
+  &__tarjeta
+    transition: transform 0.3s ease-in-out
+    position: absolute
+    bottom: 0
+    width: 100%
+    height: 100%
+    transform: translateY(100%) 
+ 
+.size-t
+  font-size: 20px 
